Add comprehensive simplified business service unit tests